2004-10-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR 474
	* config/tc-ia64.c (emit_one_bundle): Decrement md.num_slots_in_use
	after reporting template error during manual bundling. Reported
	by Michael Dupont, michaelx.dupont@intel.com.

2004-10-25  Daniel Jacobowitz  <dan@debian.org>

	* Makefile.am: Run dep-am.
	* aclocal.m4: Regenerate with automake 1.9.2.
	* Makefile.in: Regenerate with automake 1.9.2.
	* doc/Makefile.in: Likewise.

	* config/tc-arm.c: Include "dw2gencfi.h".
	(tc_arm_regname_to_dw2regnum, tc_arm_frame_initial_instructions):
	New functions.
	* config/tc-arm.h (TARGET_USE_CFIPOP, DWARF2_DEFAULT_RETURN_COLUMN)
	(DWARF2_CIE_DATA_ALIGNMENT, tc_regname_to_dw2regnum)
	(tc_cfi_frame_initial_instructions): Define.
	(tc_arm_regname_to_dw2regnum, tc_arm_frame_initial_instructions):
	Add prototypes.

2004-10-21  Tomer Levi  <Tomer.Levi@nsc.com>

	* config/tc-crx.c (assemble_insn): Check unsigned immediate
	operands validity.
	Update coprocessor id to be unsigned immediate.

2004-10-18  Aaron W. LaFramboise <aaron98wiridge9@aaronwl.com>

	* config/tc-i386.c (O_secrel): Delete.
	(tc_pe_dwarf2_emit_offset): New function.
	* config/tc-i386.h (O_secrel): Define as O_md1.
	(TC_DWARF2_EMIT_OFFSET): Define.

2004-10-18  Nick Clifton  <nickc@redhat.com>

	* config/tc-xstormy16.c (xstormy16_cons_fix_new): Accept and
	ignore @fptr() directives for 4-byte fixups.

2004-10-15  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am"
	* Makefile.in: Regenerate.

2004-10-14  Bob Wilson  <bob.wilson@acm.org>

	* doc/c-xtensa.texi (Xtensa Options, Absolute Literals Directive):
	Remove comments about placement of literal pools.
	(Literal Directive): Update description of literal placement.
	(Literal Prefix Directive): Remove statement that this does not apply
	to absolute-mode literals.  Describe new section naming scheme.

2004-10-12  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xtensa_frequency_pseudo): Use set_subseg_freq.