@@ -1,3 +1,8 @@
+2004-10-25  David Mosberger-Tang  <davidm@hpl.hp.com>
+
+	* config/tc-ia64.c (fixup_unw_records): Don't let the "t" value 
+	in an epilogue directive go negative.
+
 2004-10-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR 474
